--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,4 @@ authors = ["Brandon Nguyen"]
 edition = "2018"
 
 [dependencies]
-num = "0.2.1"
-num-traits = "0.2"
-num-derive = "0.3.0"
-libc = "0.2"
+bvm = {path = "bvm"}
