--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ authors = ["Brandon Nguyen"]
 edition = "2018"
 
 [dependencies]
-bvm = {path = "bvm"}
+num = "0.2.1"
+num-traits = "0.2"
+num-derive = "0.3.0"
+libc = "0.2"
+byteorder = "1.3.4"
